force-app/main/default/objects/Quote_Product_Details__c/Quote_Product_Details__c.object-meta.xml
<CustomObject>
    <description>Used to capture coverage, extensions and sub-limit offered for a quote</description>
    <label>Quote Product Detail</label>
    <nameField>
        <label>Quote Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>