force-app/main/default/objects/Quote_Product_Details__c/fields/Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Aggregate__c</fullName>
    <inlineHelpText>Aggregate applied on a quote product</inlineHelpText>
    <label>Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>