force-app/main/default/objects/Quote_Product_Details__c/fields/Authorized_Limit__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Limit__c</fullName>
    <inlineHelpText>Authorized limit applied on policy product detail</inlineHelpText>
    <label>Authorized Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>