force-app/main/default/objects/Quote_Product_Details__c/fields/Authorized_Sub_Limit__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Sub_Limit__c</fullName>
    <inlineHelpText>Authorized Date applied on a subscribed quote product</inlineHelpText>
    <label>Authorized Sub-Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>