force-app/main/default/objects/Quote_Product_Details__c/fields/Authorized_Sub_Limits__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Sub_Limits__c</fullName>
    <inlineHelpText>Authorized sub-limit applied on policy product detail</inlineHelpText>
    <label>Authorized Sub-Limits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>