force-app/main/default/objects/Quote_Product_Details__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Quote Product Details</relationshipLabel>
    <relationshipName>Quote_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>