force-app/main/default/objects/Quote_Product_Details__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Category of quote product detail</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Sub-limit</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>