force-app/main/default/objects/Quote_Product_Details__c/fields/Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Category_Group__c</fullName>
    <label>Category Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Uninsured Motorist Insurance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Additional Coverage</fullName>
            </value>
            <value>
                <fullName>Section-1 Property Coverage</fullName>
            </value>
            <value>
                <fullName>Section 2/Liability Coverage</fullName>
            </value>
            <value>
                <fullName>Forms and Endorsements</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Bundled Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>