force-app/main/default/objects/Quote_Product_Details__c/fields/Category_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_Type__c</fullName>
    <label>Category Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bodily Injured</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Medical Payments</fullName>
            </value>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>