force-app/main/default/objects/Quote_Product_Details__c/fields/Category_Group_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_Type_Value__c</fullName>
    <label>Category Group Type Value</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount Per Person</fullName>
            </value>
            <value>
                <fullName>Amount Per Occurrence</fullName>
            </value>
            <value>
                <fullName>Actual Cash Value</fullName>
            </value>
            <value>
                <fullName>Duration</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Pct</fullName>
            </value>
            <value>
                <fullName>Benefit for Lifetime</fullName>
            </value>
            <value>
                <fullName>Benefit to Age</fullName>
            </value>
            <value>
                <fullName>Benefit to Specific period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>