force-app/main/default/objects/Quote_Product_Details__c/fields/Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurance__c</fullName>
    <inlineHelpText>Co-Insurance rate applied on a quote product</inlineHelpText>
    <label>Co-Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>