force-app/main/default/objects/Quote_Product_Details__c/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <inlineHelpText>Coverage name of policy product detail</inlineHelpText>
    <label>Coverage Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>