force-app/main/default/objects/Quote_Product_Details__c/fields/Coverage_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type_Description__c</fullName>
    <label>Coverage Type Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>