force-app/main/default/objects/Quote_Product_Details__c/fields/Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount__c</fullName>
    <inlineHelpText>Deductible amount applied on a policy product detail</inlineHelpText>
    <label>Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>