force-app/main/default/objects/Quote_Product_Details__c/fields/Extension_Category__c.field-meta.xml
<CustomField>
    <fullName>Extension_Category__c</fullName>
    <label>Extension Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Extension_Category_GP</valueSetName>
    </valueSet>
</CustomField>