force-app/main/default/objects/Quote_Product_Details__c/fields/GetQuoteLIID__c.field-meta.xml
<CustomField>
    <fullName>GetQuoteLIID__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type DevName</label>
    <type>Text</type>
</CustomField>