force-app/main/default/objects/Quote_Product_Details__c/fields/Include_in_Doc__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Doc__c</fullName>
    <formula>IF( Name = &apos;Hard Costs&apos; 
 || Name  = &apos;Soft Costs&apos;
 || Name  = &apos;Existing Structure&apos;
 || Name  = &apos;Delay in Start-Up&apos;
 || Name= &apos;Earthquake&apos;
 || Name  = &apos;Flood&apos;
 || Name  = &apos;Sewer Back-Up&apos;
 || Name  = &apos;Water Damage&apos; 

, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Doc?</label>
    <type>Checkbox</type>
</CustomField>