force-app/main/default/objects/Quote_Product_Details__c/fields/Include_in_doc_sublimit__c.field-meta.xml
<CustomField>
    <fullName>Include_in_doc_sublimit__c</fullName>
    <formula>IF(  Name  = &apos;Unnamed Location(s)&apos;
|| Name = &apos;Property In-Transit&apos;
|| Name = &apos;Debris Removal&apos;
|| Name = &apos;Delay in Start Up&apos;
|| Name =  &apos;Extra and Expediating Expenses&apos;
|| Name = &apos;Ingress/Egress&apos;
|| Name = &apos;Fire Department Service Charges&apos;
|| Name = &apos;Fire Fighting Expenses&apos;
|| Name = &apos;Pollutant Clean-Up&apos;
|| Name = &apos;Professional Fees&apos;
|| Name = &apos;Valuable Papers and Records&apos;
|| Name = &apos;Building By-Laws&apos;
|| Name = &apos;Accounts Receivables&apos;


, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in doc sublimit</label>
    <type>Checkbox</type>
</CustomField>