force-app/main/default/objects/Quote_Product_Details__c/fields/Include_in_quote_retroscpective_date__c.field-meta.xml
<CustomField>
    <fullName>Include_in_quote_retroscpective_date__c</fullName>
    <formula>IF(  Name = &apos;Contractors Errors and Omissions Liability&apos;
||Name = &apos;Employee Benefits Liability&apos;
||Name = &apos;Employment Practices Liability&apos;
||Name = &apos;Faulty Workmanship Liability&apos;



, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in quote retroscpective date?</label>
    <type>Checkbox</type>
</CustomField>