force-app/main/default/objects/Quote_Product_Details__c/fields/Is_Product_Optional__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if product has options to choose while purchasing policy</inlineHelpText>
    <label>Is Product Optional</label>
    <type>Checkbox</type>
</CustomField>