force-app/main/default/objects/Quote_Product_Details__c/fields/Layer_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Layer_Deductible_Amount__c</fullName>
    <inlineHelpText>Layer deductible amount applied on a subscribed quote product</inlineHelpText>
    <label>Layer Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>