force-app/main/default/objects/Quote_Product_Details__c/fields/Layer_Deductible_Days__c.field-meta.xml
<CustomField>
    <fullName>Layer_Deductible_Days__c</fullName>
    <inlineHelpText>Layer deductible days applied on a subscribed quote product</inlineHelpText>
    <label>Layer Deductible Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>