force-app/main/default/objects/Quote_Product_Details__c/fields/Layer_Deductible_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Layer_Deductible_Percentage__c</fullName>
    <inlineHelpText>Layer deductible percentage applied on a subscribed quote product</inlineHelpText>
    <label>Layer Deductible Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>