force-app/main/default/objects/Quote_Product_Details__c/fields/Layer_Limit__c.field-meta.xml
<CustomField>
    <fullName>Layer_Limit__c</fullName>
    <inlineHelpText>Layer limit applied on a subscribed quote product.</inlineHelpText>
    <label>Layer Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>