force-app/main/default/objects/Quote_Product_Details__c/fields/Layer_Sub_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Layer_Sub_Limit_Amount__c</fullName>
    <inlineHelpText>Layer sub-limit amount applied on a subscribed quote product</inlineHelpText>
    <label>Layer Sub-Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>