force-app/main/default/objects/Quote_Product_Details__c/fields/Layer_Sub_Limit_Days__c.field-meta.xml
<CustomField>
    <fullName>Layer_Sub_Limit_Days__c</fullName>
    <inlineHelpText>Layer sub-limit days applied on a subscribed quote product.</inlineHelpText>
    <label>Layer Sub-Limit Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>