force-app/main/default/objects/Quote_Product_Details__c/fields/Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>Limit_Date__c</fullName>
    <label>Limit Date</label>
    <type>Date</type>
</CustomField>