force-app/main/default/objects/Quote_Product_Details__c/fields/Limit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Limit_Percentage__c</fullName>
    <inlineHelpText>Sub-Limit percentage applied on policy product detail</inlineHelpText>
    <label>Sub-Limit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>