force-app/main/default/objects/Quote_Product_Details__c/fields/Limit_Range__c.field-meta.xml
<CustomField>
    <fullName>Limit_Range__c</fullName>
    <label>Limit Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15/30/5</fullName>
            </value>
            <value>
                <fullName>25/50/25</fullName>
            </value>
            <value>
                <fullName>50/100/50</fullName>
            </value>
            <value>
                <fullName>100/200/50</fullName>
            </value>
            <value>
                <fullName>200/500/100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>