force-app/main/default/objects/Quote_Product_Details__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <inlineHelpText>Quote Product Detail Line of Business</inlineHelpText>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Lines</fullName>
            </value>
            <value>
                <fullName>Commercial Lines</fullName>
            </value>
            <value>
                <fullName>Professional Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>