force-app/main/default/objects/Quote_Product_Details__c/fields/Option_Number__c.field-meta.xml
<CustomField>
    <fullName>Option_Number__c</fullName>
    <inlineHelpText>Index to sort the product options</inlineHelpText>
    <label>Option Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>