force-app/main/default/objects/Quote_Product_Details__c/fields/Policy_Limit__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit__c</fullName>
    <inlineHelpText>Limit applied on a policy product detail</inlineHelpText>
    <label>Policy Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>