force-app/main/default/objects/Quote_Product_Details__c/fields/PPL_Date__c.field-meta.xml
<CustomField>
    <fullName>PPL_Date__c</fullName>
    <inlineHelpText>PPL Date applied on a quote product.</inlineHelpText>
    <label>PPL Date</label>
    <type>Date</type>
</CustomField>