force-app/main/default/objects/Quote_Product_Details__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Premium Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>