force-app/main/default/objects/Quote_Product_Details__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Product Details</relationshipLabel>
    <relationshipName>Quote_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>