force-app/main/default/objects/Quote_Product_Details__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Detail</label>
    <referenceTo>ProductCoverage</referenceTo>
    <relationshipLabel>Quote Product Details</relationshipLabel>
    <relationshipName>Quote_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>