force-app/main/default/objects/Quote_Product_Details__c/fields/ProductOption__c.field-meta.xml
<CustomField>
    <fullName>ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>CoverageType</referenceTo>
    <relationshipLabel>Quote Product Details</relationshipLabel>
    <relationshipName>Quote_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>