force-app/main/default/objects/Quote_Product_Details__c/fields/Quote_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_Detail__c</fullName>
    <label>Quote Product Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>