force-app/main/default/objects/Quote_Product_Details__c/fields/Required_Product__c.field-meta.xml
<CustomField>
    <fullName>Required_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if product is required to add in an Insurance Certificate</inlineHelpText>
    <label>Required Product</label>
    <type>Checkbox</type>
</CustomField>