force-app/main/default/objects/Quote_Product_Details__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <inlineHelpText>Retention applied on a policy product detail</inlineHelpText>
    <label>Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>