force-app/main/default/objects/Quote_Product_Details__c/fields/Retroactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Date__c</fullName>
    <inlineHelpText>Retroactive date of a quote product</inlineHelpText>
    <label>Retroactive Date</label>
    <type>Date</type>
</CustomField>