force-app/main/default/objects/Quote_Product_Details__c/fields/Separate__c.field-meta.xml
<CustomField>
    <fullName>Separate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if coverage is seperate</inlineHelpText>
    <label>Separate</label>
    <type>Checkbox</type>
</CustomField>