force-app/main/default/objects/Quote_Product_Details__c/fields/Sub_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Limit__c</fullName>
    <inlineHelpText>Sub-Limit applied on policy product detail</inlineHelpText>
    <label>Sub-Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>