force-app/main/default/objects/Quote_Product_Details__c/fields/Third_Party_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if quote product is of a third-party coverage</inlineHelpText>
    <label>Third-Party Coverage</label>
    <type>Checkbox</type>
</CustomField>