force-app/main/default/objects/Quote_Product_Details__c/fields/Type_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Coverage__c</fullName>
    <inlineHelpText>Type of a quote product</inlineHelpText>
    <label>Type of Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any one claim</fullName>
            </value>
            <value>
                <fullName>Each Occurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>