force-app/main/default/objects/Quote_Product_Details__c/fields/Type_of_License_Holder__c.field-meta.xml
<CustomField>
    <fullName>Type_of_License_Holder__c</fullName>
    <inlineHelpText>Choose all the licenses applied on a quote product</inlineHelpText>
    <label>Type of License Holder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licensed Life Insurance and/or Accident and Sickness Insurance Agent (LLQP)</fullName>
            </value>
            <value>
                <fullName>Mutual Fund Dealer Association (MFDA) Registered Representative</fullName>
            </value>
            <value>
                <fullName>Investment Industry Regulatory Organization of Canada (IIROC) Registered Representative.</fullName>
            </value>
            <value>
                <fullName>Exempt Market Dealer (EMD)</fullName>
            </value>
            <value>
                <fullName>Unlicensed Financal Planners</fullName>
            </value>
            <value>
                <fullName>Unlicensed Assistants</fullName>
            </value>
            <value>
                <fullName>Licensed Assistants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>