force-app/main/default/objects/Quote_Product_Details__c/fields/Type_of_QPD__c.field-meta.xml
<CustomField>
    <fullName>Type_of_QPD__c</fullName>
    <description>This field describes the type of product.</description>
    <inlineHelpText>Type of Product.</inlineHelpText>
    <label>Type of QPD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
            <value>
                <fullName>Firm Rider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>