force-app/main/default/objects/Quote_Product_Details__c/fields/U_S_ERISA_Plan_Coverage__c.field-meta.xml
<CustomField>
    <fullName>U_S_ERISA_Plan_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if quote product is of U.S. ERISA plan coverage</inlineHelpText>
    <label>U.S. ERISA Plan Coverage</label>
    <type>Checkbox</type>
</CustomField>