force-app/main/default/objects/Quote_Product_Details__c/fields/whatToShow__c.field-meta.xml
<CustomField>
    <fullName>whatToShow__c</fullName>
    <formula>IF(  Deductible_Amount__c &gt;0 &amp;&amp; !ISBLANK(Deductible_Amount__c  ) &amp;&amp;  Deductible_Percentage__c =0,&apos;$&apos; &amp; TEXT(FLOOR(Deductible_Amount__c /1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Deductible_Amount__c ), LEN(TEXT(Deductible_Amount__c )) - LEN(TEXT(FLOOR(Deductible_Amount__c /1000)))),

IF(Deductible_Amount__c  &gt;0 &amp;&amp; !ISBLANK(Deductible_Percentage__c)&amp;&amp;Deductible_Percentage__c&gt;0 ,Text(FLOOR(Deductible_Percentage__c*100))&amp;&quot;%&quot;&amp;&quot; or &quot;&amp;&quot;$&quot;

&amp; TEXT(FLOOR(Deductible_Amount__c /1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Deductible_Amount__c ), LEN(TEXT(Deductible_Amount__c )) - LEN(TEXT(FLOOR(Deductible_Amount__c /1000)))),


IF( !ISBLANK(Deductible_Percentage__c) &amp;&amp; Deductible_Percentage__c &gt;0 , TEXT(FLOOR(Deductible_Percentage__c*100)) &amp; &quot;%&quot;,


IF(Deductible_Days__c &gt;0 &amp;&amp; !Isnull(Deductible_Days__c) , TEXT(Deductible_Days__c)&amp;&quot; Days &quot;,&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>whatToShow</label>
    <type>Text</type>
</CustomField>