force-app/main/default/objects/Quote_Product_Details__c/recordTypes/Quote_Product_Detail_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Quote_Product_Detail_Subscription</fullName>
    <active>true</active>
    <description>Represent coverage, extension and sub-limit of Subscription lines product.</description>
    <label>Quote Product Detail(Subscription)</label>
</RecordType>