force-app/main/default/objects/Quote_Product_Details__c/recordTypes/Sponsored_Program.recordType-meta.xml
<RecordType>
    <fullName>Sponsored_Program</fullName>
    <active>true</active>
    <description>Represent coverage, extension and sub-limit of Sponsored Program.</description>
    <label>Sponsored Program</label>
</RecordType>