force-app/main/default/objects/Quote_Product_Details__c/validationRules/Product_Match_from_Prod_detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Match_from_Prod_detail</fullName>
    <active>false</active>
    <errorConditionFormula>00Nf0000005t4Tg.00Nf0000005t4Ov.Id   &lt;&gt;  00Nf0000005t4Tv.Product.Id</errorConditionFormula>
    <errorMessage>Under Quote Product, please select the same product mentioned under Product Detail.</errorMessage>
</ValidationRule>